traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: ':' expected but ')' found.
def isPair(nb):Boolean={
             ^TraversalZigZag:42: error: identifier expected but '}' found.
}
^